--- a/second year/third semester/UID/lab4/index.html
+++ b/second year/third semester/UID/lab4/index.html
@@ -13,6 +13,12 @@
                 <td> <input type="button" value="C" onclick="clearScreen()" id="btn" /> </td>
             </tr>
             <tr>
+                <td><input type="button" value="OFF" onclick="display('OFF')" id="btn"/></td>
+                <td><input type="button" value="√" onclick="display('√')"/></td>
+                <td><input type="button" value="%" onclick="display('%')"/></td>
+                <td><input type="button" value="←" onclick="display('←')"/></td>
+            </tr>
+            <tr>
                 <td> <input type = "button" value="1" onclick="display('1')"/></td>
                 <td> <input type = "button" value="2" onclick="display('2')"/></td>
                 <td> <input type = "button" value="3" onclick="display('3')"/></td>
