Completion labs(UID)

--- a/second year/third semester/UID/lab4/index.html
+++ b/second year/third semester/UID/lab4/index.html
@@ -52,7 +52,7 @@
       <div class = "sixth-row">
         <input type="button" value="√" onclick="calculate(Math.sqrt(result.value))" />
         <input type="button" value="%" onclick="liveScreen('%')" />
-        <input type="button" value="M+" onclick="calculate(Math.abs(result.value))" />
+        <input type="button" value="1/x" onclick="calculate(1/result.value)" />
         <input type="button" value="M-" onclick="calculate(result.value*-1)" />
       </div>
     </div>
