--- a/second year/third semester/UID/lab7/index.html
+++ b/second year/third semester/UID/lab7/index.html
@@ -14,7 +14,7 @@
     <input type="text" id="myInput" placeholder="Title...">
     <span onclick="newElement()" class="addBtn">Add</span>
   </div>
-  
+  <nobr>
   <ul id="myUL" class="tasks__list">
     <li class="text tasks__item">Hit the gym</li>
     <li class="text tasks__item checked">Pay bills</li>
@@ -23,7 +23,7 @@
     <li class="text tasks__item">Read a book</li>
     <li class="text tasks__item">Organize office</li>
   </ul>
- 
+</nobr>
 <script src="scripts.js"></script>
 </body>
 </html>
